cabal-version: 3.0
name:          json-pointer
version:       0.0.1.0
synopsis:      JSON Pointers for Aeson
description:   See README.md
author:        Scrive AB
maintainer:    Scrive AB
copyright:     Scrive AB

library
    default-extensions:
        BangPatterns
        BlockArguments
        ConstraintKinds
        DataKinds
        DeriveAnyClass
        DeriveFunctor
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedLabels
        OverloadedStrings
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        StrictData
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances

    default-language:   Haskell2010

    ghc-options:
        -Weverything -Werror -Wno-all-missed-specialisations
        -Wno-missed-specialisations -Wno-prepositive-qualified-module
        -Wno-missing-export-lists -Wno-missing-import-lists
        -Wno-missing-local-signatures -Wno-monomorphism-restriction
        -Wno-safe -Wno-unsafe -fno-show-valid-hole-fits
        -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
        -Wno-missing-kind-signatures
        -Wprepositive-qualified-module

    hs-source-dirs:  src
    exposed-modules:
        JSONPointer.Aeson
        JSONPointer.Model
        JSONPointer.Parser

    build-depends:
        , aeson
        , attoparsec
        , base
        , text
        , vector
